# psychopy-emotiv

./: .buildinfo  CHANGELOG.txt  README.md  emotiv_API.html  emotiv_marking.html  emotiv_record.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: publish_pypi.yaml
_sources/: emotiv_API.rst.txt  index.rst.txt
docs/: conf.py  emotiv_API.rst  index.rst
psychopy_emotiv/: __init__.py  emotiv.py
psychopy_emotiv/emotiv_marking/: __init__.py
psychopy_emotiv/emotiv_record/: __init__.py
